--- a/mysite/blog/templates/contact.html
+++ b/mysite/blog/templates/contact.html
@@ -1,9 +1,12 @@
- {% extends "base.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% block content %}
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKzQjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 
 <div style="margin-top: 50px;">
     <section class="contact-area pt-120 pb-80 fix">
@@ -39,10 +42,25 @@
                                 <div class="col-xxl-12 col-xl-12 col-lg-12 mb-20">
                                     <textarea id="message" name="message" placeholder="Write Message" required></textarea>
                                 </div>
-                                <div class="col-xxl-12 col-xl-12 mb-20">
-                                    <button type="submit" class="theme-btn border-btn">Send a message</button>
+                                <div class="col-xxl-12 col-xl-12 mb-20 d-flex align-items-center">
+                                    <input id="captcha" name="captcha" type="text" placeholder="Enter CAPTCHA" required class="form-control me-2">
+                                    <span id="captcha-image" class="border rounded p-2 me-2">{{ captcha }}</span>
+                                    <button type="button" id="refresh-captcha" class="btn btn-outline-secondary" style="width: 50px;">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </button>
                                 </div>
-                            </div>
+                                <div class="col-xxl-12 col-xl-12 mb-20">
+                                    <button type="submit" class="theme-btn border-btn">Send a message</button>                
+                                </div>
+                               
+                                
+                            <!-- <div class="col-xxl-12 col-xl-12 mb-20 d-flex align-items-center">
+                                <input id="captcha" name="captcha" type="text" placeholder="Enter CAPTCHA" required class="form-control me-2">
+                                <span id="captcha-image" class="border rounded p-2 me-2">{{ captcha }}</span>
+                                <button type="button" id="refresh-captcha" class="btn btn-outline-secondary" style="width: 50px;">
+                                    <i class="fas fa-sync-alt"></i>
+                                </button>
+                            </div> -->
                         </form>
                     </div>
                 </div>
@@ -56,34 +74,52 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 <script>
-    $(document).ready(function () {
-        $('#contact-form').on('submit', function (e) {
-            e.preventDefault();  
+   $(document).ready(function () {
+    function refreshCaptcha() {
+        $.ajax({
+            url: "{% url 'refresh_captcha' %}",  // Add the URL for refreshing CAPTCHA
+            type: "GET",
+            success: function (response) {
+                $('#captcha-image').text(response.captcha);
+            }
+        });
+    }
 
-            let formData = {
-                name: $('#name').val(),
-                email: $('#email').val(),
-                phone: $('#phone').val(),
-                subject: $('#subject').val(),
-                message: $('#message').val(),
-                csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val()
-            };
+    $('#refresh-captcha').on('click', function () {
+        refreshCaptcha();
+    });
 
-            $.ajax({
-                url: "{% url 'contact' %}",  
-                type: "POST",
-                data: formData,
-                success: function (response) {
-                    if (response.success) {
-                        $('.alert-messages').html('<div class="alert alert-success">' + response.message + '</div>');
-                        $('#contact-form')[0].reset();
-                    }
-                },
-                error: function (response) {
-                    $('.alert-messages').html('<div class="alert alert-danger">There was an error sending your message.</div>');
+    $('#contact-form').on('submit', function (e) {
+        e.preventDefault();  
+
+        let formData = {
+            name: $('#name').val(),
+            email: $('#email').val(),
+            phone: $('#phone').val(),
+            subject: $('#subject').val(),
+            message: $('#message').val(),
+            captcha: $('#captcha').val(),
+            csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val()
+        };
+
+        $.ajax({
+            url: "{% url 'contact' %}",  
+            type: "POST",
+            data: formData,
+            success: function (response) {
+                if (response.success) {
+                    $('.alert-messages').html('<div class="alert alert-success">' + response.message + '</div>');
+                    $('#contact-form')[0].reset();
+                    refreshCaptcha(); 
                 }
-            });
+            },
+            error: function (response) {
+                $('.alert-messages').html('<div class="alert alert-danger">There was an error sending your message.</div>');
+            }
         });
     });
+    refreshCaptcha();
+});
+
 </script>
 {% endblock %}
